--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "v3-handroll",
-  "version": "1.0.0",
+  "private": true,
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "start": "pnpm --filter bot start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,13 +12,5 @@
   "engines": {
     "bun": ">=1.3"
   },
-  "packageManager": "pnpm@10.29.1",
-  "dependencies": {
-    "@types/node": "^25.3.0",
-    "@types/uuid": "^11.0.0",
-    "dotenv": "^17.3.1",
-    "puppeteer-core": "^24.37.5",
-    "typescript": "^5.9.3",
-    "uuid": "^13.0.0"
-  }
+  "packageManager": "pnpm@10.29.1"
 }
